<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_content"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_hashAndPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_hash_and_package"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_login_to_linkedin"/>

    <Button
        android:id="@+id/btn_getCurrentUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_get_currentuser"/>

    <Button
        android:id="@+id/btn_getUserConnections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_get_user_connections"/>

</LinearLayout>
